--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,10 @@
         <activity
             android:name=".GameActivity"
             android:label="@string/app_name">
-
         </activity>
+
+        <activity android:name=".WinActivity"
+           />
 
         <activity
             android:name="com.example.greenq.fino.MainActivity"
