--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
+        <supports-screens>
+            android:smallScreen=["true"]
+            android:normalScreen=["true"]
+            android:largeScreen=["true"]
+            android:anyDensity=["true"]
+
+        </supports-screens>
+
         <activity
             android:name="com.example.greenq.fino.LoadActivity"
             android:label="@string/app_name"
