--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,16 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
+        <supports-screens>
+            android:smallScreen=["true"]
+            android:normalScreen=["true"]
+            android:largeScreen=["true"]
+            android:anyDensity=["true"]
+
+        </supports-screens>
         <activity
             android:name="com.example.greenq.fino.LoadActivity"
-            android:label="@string/app_name"
+
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar">
 
@@ -23,7 +30,7 @@
 
         <activity
             android:name=".GameActivity"
-            android:label="@string/app_name">
+           >
         </activity>
 
         <activity android:name=".WinActivity"
@@ -31,7 +38,7 @@
 
         <activity
             android:name="com.example.greenq.fino.MainActivity"
-            android:label="@string/app_name"></activity>
+            ></activity>
 
     </application>
 
