--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.greenq.fino" >
 
+    <supports-screens>
+        android:smallScreen=["true"]
+        android:normalScreen=["true"]
+        android:largeScreen=["true"]
+        android:anyDensity=["true"]
+
+    </supports-screens>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
-        <supports-screens>
-            android:smallScreen=["true"]
-            android:normalScreen=["true"]
-            android:largeScreen=["true"]
-            android:anyDensity=["true"]
 
-        </supports-screens>
 
         <activity
             android:name="com.example.greenq.fino.LoadActivity"
@@ -45,7 +47,6 @@
 
     </application>
 
-
-
-
+    <uses-permission
+        android:name="com.android.vending.BILLING"/>
 </manifest>
