Выгрузка слова и картинок по id

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,8 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"></activity>
 
+        <activity android:name="com.example.greenq.fino.MarketActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
     <uses-permission
