--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.greenq.fino" >
+    package="com.dailyappslab.fino"
+    android:versionCode="1"
+    android:versionName="1.0" >
+
+
+
+    <meta-data android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version"/>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+
 
     <supports-screens>
         android:smallScreen=["true"]
@@ -19,7 +31,7 @@
 
 
         <activity
-            android:name="com.example.greenq.fino.LoadActivity"
+            android:name="com.dailyappslab.fino.LoadActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
 
@@ -33,20 +45,20 @@
         </activity>
 
         <activity
-            android:name=".GameActivity"
+            android:name="com.dailyappslab.fino.GameActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
         </activity>
 
-        <activity android:name=".WinActivity"
+        <activity android:name="com.dailyappslab.fino.WinActivity"
            />
 
         <activity
-            android:name="com.example.greenq.fino.MainActivity"
+            android:name="com.dailyappslab.fino.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"></activity>
 
-        <activity android:name="com.example.greenq.fino.MarketActivity"
+        <activity android:name="com.dailyappslab.fino.MarketActivity"
             android:screenOrientation="portrait"></activity>
     </application>
 
