--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('libs/anjlab-iabv3-current.jar')
+    compile files('libs/StartADLib-1.0.1.jar')
+    compile 'com.google.android.gms:play-services:4.0.30'
+    //compile files('libs/StartADLib-1.0.1.jar')
+    compile 'com.google.code.gson:gson:2.2.4@jar'
 }
