--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
 
     <meta-data android:name="com.google.android.gms.version"
         android:value="@integer/google_play_services_version"/>
-
+    <meta-data android:name="email" android:value="you@email" />
+    <meta-data android:name="trackingId" android:value="yourid" />
+    <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
@@ -28,7 +30,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
-
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
 
         <activity
             android:name="com.dailyappslab.fino.LoadActivity"
@@ -61,6 +64,9 @@
 
         <activity android:name="com.dailyappslab.fino.MarketActivity"
             android:screenOrientation="portrait"></activity>
+
+        <activity android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
     </application>
 
     <uses-permission
