займаюсь баловством з мейн актівіті)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,10 @@
             android:screenOrientation="portrait"></activity>
 
         <activity android:name="com.dailyappslab.fino.MarketActivity"
+            android:theme="@style/Theme.AppCompat.Dialog"
+            android:screenOrientation="portrait"></activity>
+
+        <activity android:name="com.dailyappslab.fino.AboutUsActivity"
             android:screenOrientation="portrait"></activity>
 
         <activity android:name="com.google.android.gms.ads.AdActivity"
