--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     //compile files('libs/StartADLib-1.0.1.jar')
     compile 'com.google.code.gson:gson:2.2.4@jar'
     compile files('libs/google-play-services.jar')
+    compile files('libs/libGoogleAnalyticsServices.jar')
 }
