Fixed latters buttons bug on xlarge layout; Fixed cost of the hint with letter removing;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,8 @@
         </activity>
 
         <activity android:name=".WinActivity"
-            android:theme="@style/AppThemeDialog"></activity>
+
+            ></activity>
 
 
         <activity
