--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,8 +58,7 @@
         </activity>
 
         <activity android:name=".WinActivity"
-
-            ></activity>
+            android:theme="@style/AppThemeDialog"></activity>
 
 
         <activity
