--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
         </activity>
 
         <activity android:name=".WinActivity"
-            android:theme="@style/AppThemeDialog"></activity>
+            android:theme="@style/Theme.D1NoTitleDim"></activity>
 
 
         <activity
