--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dailyappslab.fino"
-    android:versionCode="13"
-    android:versionName="1.12" >
+    android:versionCode="14"
+    android:versionName="1.13" >
 
 
 
@@ -57,8 +57,7 @@
             android:screenOrientation="portrait">
         </activity>
 
-        <activity android:name=".WinActivity"
-            android:theme="@style/AppThemeDialog"></activity>
+        <activity android:name=".WinActivity"></activity>
 
 
         <activity
